# hrm-particle

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements-data.txt  requirements-dev.txt  requirements-train.txt  requirements-v1.txt  requirements.txt
configs/: eval.yaml  poc_a100.yaml  poc_h100.yaml  smoke.yaml  v1_1gpu.yaml  v1_2gpu_poc.yaml  v1_3gpu_full.yaml
data/: README.md
data/sample/: sample.jsonl
docs/: HRM_PARTICLE_POC_OVERVIEW.tex  RUNPOD.md
notebooks/: HRM_Text_1B_Particle_V1.ipynb  HRM_Text_1B_Particle_V1.py
runs/v1_1gpu/: code-provider-canary.json  final-q-calibration.json  memory-plan.json  noise-scale-selection.json  q-calibration.json  token-audit.json
scripts/: _common.py  build_v1_notebook.py  evaluate.py  prepare_data.py  run_smoke.py  train.py  v1_code_provider_probe.py  v1_distributed.py  v1_prepare_data.py  v1_summarize_evalplus.py  v1_token_audit.py
src/hrm_particle/: __init__.py  adapter.py  cache.py  checkpoint.py  data.py  evaluate.py  gaussian.py  model.py  objectives.py  prompting.py  rollout.py  smoke.py  trainer.py  v1_data.py  v1_dependencies.py  v1_distributed.py  v1_evalplus.py  (+5 more)
tests/: conftest.py  test_adapter.py  test_cache.py  test_data.py  test_evaluate.py  test_gaussian.py  test_model_tiny.py  test_objectives.py  test_prompting.py  test_real_tiny_training.py  test_scripts.py  test_trainer_dummy.py  test_v1_data.py  test_v1_dependencies.py  test_v1_distributed.py  test_v1_evalplus.py  test_v1_memory.py  test_v1_notebook.py  test_v1_preflight.py  test_v1_rewards.py  test_v1_utils.py  test_verifier.py
(+13 files in other folders)
